[package]
name = "dmm-books-scraper"
version = "0.1.0"
authors = ["yukihane <yukihane.feather@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11.2", features = ["json", "blocking"] }
scraper = "0.12.0"
